# qbond-landauer-nelson-bridge

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: assumptions_and_limits.md  referee_notes.md  theorem_statement.md
paper/: main.tex  refs.bib  supplement.tex
results/: verification_summary.txt
results/tables/: inversion_checks.csv  theorem_checks.csv
scripts/: generate_tables.py  landauer_nelson_solved.py  reproduce_figures.py
src/bt11/: __init__.py  bridge.py  constants.py  inversion.py  kernels.py
tests/: test_bridge_identity.py  test_inversions.py  test_kernel_solutions.py  test_units.py
